# mantid-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  README.md  setup.cfg
mantid_hooks/: mantid_release_note_check.py
tests/: mantid_release_note_check_test.py
