[metadata]
name = mantid_hooks
version = 1.0.0
description = "pre-commit hooks for mantid"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jhaigh0/mantid-release-note-check
author = Jonathan Haigh
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    mantid-release-note-check = mantid_hooks.mantid_release_note_check:main
